[TESTMAN] Fix horizontal scrollbars when comparing test results. Previous commit didn't fix it for me in Firefox at least.
ONLINE-639


svn path=/trunk/; revision=981

--- a/www/www.reactos.org/testman/css/compare.css
+++ b/www/www.reactos.org/testman/css/compare.css
@@ -7,7 +7,7 @@
 
 html, body {
 	height: auto;
-	overflow-x: auto;
+	overflow: visible;
 }
 
 body {
